--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@minimal/minimal-kit-react",
-  "author": "minimals.cc",
-  "version": "2.4.0",
+  "name": "businiss-rate",
+  "author": "Alina",
+  "version": "1.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
   "scripts": {
