--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@material-ui/lab": "^5.0.0-alpha.41",
     "@material-ui/styles": "^5.0.0-beta.2",
     "@material-ui/utils": "^5.0.0-beta.1",
+    "@mui/icons-material": "^5.4.2",
     "@react-pdf/renderer": "^2.0.18",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -104,6 +105,7 @@
     "react-helmet-async": "^1.0.9",
     "react-i18next": "^11.11.4",
     "react-image-lightbox": "^5.1.4",
+    "react-image-zoom": "^1.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
     "react-map-gl": "^6.1.16",
