--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@mui/icons-material": "^5.4.2",
     "@react-pdf/renderer": "^2.0.18",
     "@reduxjs/toolkit": "^1.6.1",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.24.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
