--- a/package.json
+++ b/package.json
@@ -104,12 +104,16 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^11.3.4",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet-async": "^1.0.9",
     "react-i18next": "^11.11.4",
     "react-image-lightbox": "^5.1.4",
     "react-image-zoom": "^1.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
+    "react-load-script": "^0.0.6",
     "react-map-gl": "^6.1.16",
     "react-markdown": "^6.0.3",
     "react-quill": "^2.0.0-beta.2",
